Asciidoc generation from domain doc comments and REST API
